# pyobsplot

./: .editorconfig  .gitignore  .nojekyll  .prettierrc.json  CNAME  LICENSE  NEWS.md  README.md  changelog.html  contributing.html  development.html  gallery_geo.html  gallery_interaction.html  gallery_marks.html  gallery_themes.html  gallery_transforms.html  getting_started.html  index.html  package-lock.json  package.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  usage.html
.github/workflows/: publish.yml  tests.yml
css/: styles.css
doc/: .gitignore  _quarto.yml  _setup.qmd  _setup_widget.qmd  changelog.md  contributing.qmd  custom.scss  development.qmd  gallery_geo.qmd  gallery_interaction.qmd  gallery_marks.qmd  gallery_themes.qmd  gallery_transforms.qmd  getting_started.qmd  index.qmd  styles.css  usage.qmd
doc/_extensions/juba/bookup/: _extension.yml  bookup.scss  bookup_dark.scss  embed-fonts.lua  fonts-embed.css
doc/data/: ca55-south.csv  metros.csv  penguins.csv  simpsons.csv  stocks.csv
examples/: interactivity.ipynb  introduction.ipynb
js/: index.css  index.js  jsdom.js  parsing.js  plot.js  styles.css  widget.js
js/node/: jsdom.js  package.json  plot.js
js/pyobsplot-js/: README.md  jsdom.js  main.js  package-lock.json  package.json  parsing.js  plot.js
js/widget/: styles.css  widget.js
site_libs/bootstrap/: bootstrap-3095cb3133064099da2b6c1e837d828f.min.css  bootstrap-324f14f653cf6b7f1b7bce330e431e10.min.css  bootstrap-36ed28565e95d5e7ba0e57733cac60ab.min.css  bootstrap-4c3ee2c6b7981b6f4a3b84a1e9d0b966.min.css  bootstrap-7a3eaccc783c981f11d47746ab14e9c5.min.css  bootstrap-7d46b64c6b68255429cc2406efca056e.min.css  bootstrap-d0ee546a45abd81f589d1da344d24cd7.min.css  bootstrap-dark.min.css  bootstrap-e39b6a24de9110d2725fa1fb02cfe0df.min.css  bootstrap.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-081ad999100379510ae6a1de97f98ad9.css  quarto-syntax-highlighting-1d9754e6b7e1dc15a659fbcd6780067e.css  quarto-syntax-highlighting-629432c7d29b615b3888e3cdfd62b7a9.css  quarto-syntax-highlighting-7a74a04c80d9ab624e168011e1613f8c.css  quarto-syntax-highlighting-88e8eab2b9e74ff2b2dcb2dc0227e102.css  quarto-syntax-highlighting-8e54dfbe729680b42f22c627ac27a053.css  quarto-syntax-highlighting-aa0006ec45185f41362e9cf29e779a84.css  quarto-syntax-highlighting-af17009a09fe2fb59a7bf5ed299726c9.css  quarto-syntax-highlighting-dark.css  quarto-syntax-highlighting-ebbede3f255f00f2ca408d38e0ffdffb.css  quarto-syntax-highlighting.css
src/ipyobsplot/: __init__.py  data.py  widget.py
src/js/: styles.css  widget.js
src/pyobsplot/: __init__.py  data.py  js_modules.py  jsdom.py  jsmodules.py  obsplot.py  parsing.py  plot.py  utils.py  widget.py
src/pyobsplot/static/: index.js  static-styles.css  static-widget.js  styles.css  template.typ  widget.js
tests/: test_jsdom.py  test_obsplot.py  test_parsing.py  test_plot.py
tests/js/: test_parsing.js
tests/jsdom_reference/: defaults.pkl  specs.pkl  themes.pkl
tests/jsdom_reference/html/: complex_penguins_facet.html  complex_simpsons_cells.html  complex_stateage.html  date_datetime_datetime.html  defaults_html_default.html  defaults_svg_default.html  defaults_svg_no_default.html  geo_states.html  geo_vapor.html  simple_svg1.html  simple_svg2.html  source_pd_df.html  source_pl_series.html  themes_dark.html  transform_groupx.html
tests/python/: .gitignore  generate_jsdom_reference.py  test_data.py  test_jsdom.py  test_jsmodules.py  test_obsplot.py  test_parsing.py  test_widget.py
tests/python/jsdom_reference/: specs.pkl
tests/python/jsdom_reference/html/: bug_utf8.html  complex_metros_arrow.html  complex_simpsons_cells.html  complex_stocks.html  date_datetime_date.html  date_pandas_datetime_date.html  date_pandas_datetime_datetime.html  date_polars_datetime_date.html  date_polars_datetime_datetime.html  geo_ca55.html  simple_svg2.html  source_pl_df.html  source_pl_series.html  themes_current.html  themes_light.html  titles_caption.html
tests/python/reference/: bug_utf8.html  complex_metros_arrow.html  complex_stateage.html  defaults.pkl  defaults_html_default.html  defaults_html_no_default.html  geo_states.html  geo_vapor.html  specs.pkl  stocks.html  themes.pkl  themes_current.html  themes_dark.html
tests/ui/: jupyter_server_config.py  playwright.config.cjs
tests/ui/tests/: pyobsplot.test.js  pyobsplot.test.ts
tests/ui/tests/notebooks/: complex_plots.ipynb  data_sources.ipynb  dates.ipynb  default_values.ipynb  errors.ipynb  geo.ipynb  mix_renderers.ipynb  syntax.ipynb  tests.ipynb  themes.ipynb  transforms.ipynb
utils/: get_plot_methods.js
